# guestbook

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  nginx.example.conf  pyproject.toml  swag-proxy.example.conf
alembic/: env.py
alembic/versions/: 1e66b4ed38cd_remove_age_add_alcohol_to_guest_group_.py  5b9f914748f0_add_notification_logs_table.py  8d52bc508b17_initial_schema_with_orgs_households_rbac.py  bfa6004dd3c5_initial_schema.py
docs/: deployment.md  development.md  rbac.md
src/guestbook/: __init__.py  __main__.py  admin_pages.py  app.py  cli.py  config.py  database.py  dev_pages.py  middleware.py  org_pages.py  pages.py
src/guestbook/api/: admin.py  auth.py  deps.py  events.py  guests.py  households.py  orgs.py  qr.py  router.py  rsvps.py
src/guestbook/models/: __init__.py  base.py  event.py  event_manager.py  household.py  notification.py  organization.py  rsvp.py  token.py  user.py
src/guestbook/schemas/: auth.py  event.py  household.py  organization.py  rsvp.py  user.py
src/guestbook/services/: auth.py  email.py  notification.py  qr.py
src/guestbook/static/css/: style.css
src/guestbook/static/js/: app.js
src/guestbook/templates/: base.html  error.html  event.html  household_join.html  index.html  link_sent.html  login.html  profile.html  rsvp_confirm.html  rsvp_form.html  signup.html
src/guestbook/templates/admin/: dashboard.html  event_form.html  event_list.html  guest_list.html  login.html  user_list.html
tests/: conftest.py  test_admin.py  test_auth.py  test_events.py  test_rsvp.py
(+13 files in other folders)
